# atcoder-cli

./: .gitignore  CHANGELOG.md  README.md  atcli.cabal  atcoder.go  atcoder_test.go  build.sh  command.go  command_test.go  download.go  download_test.go  go.mod  hie.yaml  init.go  init_test.go  install.sh  language.go  language_test.go  logger.go  login.go  main.go  package.yaml  test.go  testcase.go  testcase_test.go  workspace.go  workspace_test.go
.github/workflows/: release.yml
app/: Main.hs
cmd/: download.go  download_test.go  init.go  init_test.go  root.go  submit.go  test.go
src/: Cli.hs  Di.hs  Domain.hs  Interface.hs  Types.hs
src/Domain/: Ports.hs  Types.hs  Validate.hs
src/Domain/Usecase/: Init.hs
src/Infra/: Atcoder.hs  FileSystem.hs  Logger.hs
src/Provider/: Atcoder.hs  Browser.hs  Clipboard.hs  Config.hs  Executor.hs  FileSystem.hs  Language.hs  Logger.hs  Os.hs  Problem.hs  Req.hs  Session.hs  Stdin.hs  TestCase.hs  User.hs  Utils.hs
src/Usecase/: Deps.hs  Download.hs  Init.hs  Login.hs  Ports.hs  Problem.hs  Submit.hs  Test.hs  Utils.hs  test.hs
test/: DomainSpec.hs  Mock.hs  Spec.hs  TestUtils.hs  TypesSpec.hs
test/Domain/: ValidateSpec.hs
test/Provider/: AtcoderSpec.hs  ConfigSpec.hs  LanguageSpec.hs  SessionSpec.hs
test/Usecase/: DownloadSpec.hs  InitSpec.hs  LoginSpec.hs  SubmitSpec.hs  TestSpec.hs
