cabal-version:       2.2

name:                atcli
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ppdx999/atcli#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2025 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md
library
  hs-source-dirs:      src
  exposed-modules:     Domain.Types
                       , Domain.Validate
                       , Domain.Ports
                       , Domain.Usecase.Init
  build-depends:       base >= 4.7 && < 5
                       , bytestring
                       , exceptions
                       , filepath
                       , mtl
                       , text
                       , time
                       , transformers
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

test-suite atcli-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                       , text
                       , atcli
                       , hspec >= 2.7 && < 3
  other-modules:       Domain.ValidateSpec
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -threaded -rtsopts -with-rtsopts=-N

executable atcli
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                       , text
                       , atcli
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
